--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "preview": "vite preview",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "build": "vite build",
-    "deploy": "npm run build && mv dist ../dist_version_control/dist_$(date +'%Y%m%d%H%M%S') && gh-pages -d . -b main && gh-pages -d dist -b gh-pages"
+    "deploy": "npm run build && mv dist ../dist_version_control/dist_$(date +'%Y%m%d%H%M%S') && gh-pages -d . -b main && gh-pages -d ../dist_version_control/dist_$(date +'%Y%m%d%H%M%S') -b gh-pages"
   },
   "repository": {
     "type": "git",
